# series_temporelles_henon

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
analysis/: training_history.py
configs/: data_generation.yaml  evaluation.yaml  model.yaml  preprocessing.yaml  takens.yaml  training.yaml
docs/: architecture.md  index.md  methodology.md  usage.md
outputs/: one_step_predictions.csv  training_history.csv  training_summary.txt
results/activation_search/: activation_results.xlsx
results/architecture_search/: hidden_neurons_results.xlsx
results/embedding/: eigenvalues.csv  embedding_dimension.txt  embedding_errors.csv
results/embedding_experiments/: analysis.txt  summary.csv
results/embedding_experiments/maxdim_100/: covariance_matrix.csv  eigenvalues.csv  embedding_errors.csv  summary.txt
results/embedding_experiments/maxdim_20/: covariance_matrix.csv  embedding_errors.csv  summary.txt
results/threshold_analysis/: analysis.txt  threshold_analysis.csv
results/training/: network_initialization.txt  network_summary.json
results/training_parameters/: epochs_results.xlsx  learning_rate_results.xlsx  tolerance_results.xlsx
scripts/: analyze_thresholds.py  run_activation_search.py  run_attractor.py  run_backpropagation_demo.py  run_embedding.py  run_embedding_experiments.py  run_forward_pass.py  run_generation.py  run_hidden_neurons_search.py  run_network_init.py  run_one_step_prediction.py  run_training_analysis.py  run_training_parameters.py
src/henon/: __init__.py
tests/core/: test_embedding.py
(+52 files in other folders)
